sample/asm/errors/no_end_between_defs.asm
.def: foo 0
    end
; below should be .end and not .def
.def

.def: main 0
    izero 0
    end
.end
